# neurodesign-plus

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  README.md  SETUP.md  pyproject.toml  requirements.txt  tox.ini  tuto_base_package.ipynb
.github/workflows/: publish.yml  update_precommit_hooks.yml
Modification Tutorials/: controlled_probabalistic_ordering.ipynb  fixed_order.ipynb  varied_stimuli_durations.ipynb
docs/: api_reference.md  conf.py  getting_started.md  index.md  installation.md  metrics.md  new_features.md  requirements.readthedocs.txt  tutorials.md
manuals/: METRICS.md  SETUP.md  TECHNICAL_CHANGES.md
neurodesign/: classes.py  generate.py  report.py
tests/: test_behavior.py
tutorials/: tutorial_2_comparing_designs_across_experiments.ipynb  tutorial_neurodesign_base_overview.ipynb
tutorials/base_functions/: tutorial_base_compare_and_simulate.ipynb  tutorial_base_discovering_best_design.ipynb  tutorial_base_functions_comparing_designs.ipynb  tutorial_base_functions_optimizating_and_report.ipynb
tutorials/new_functions/: tutorial_new_controlled_probabalistic_ordering.ipynb  tutorial_new_fixed_order.ipynb  tutorial_new_varied_ITI.ipynb  tutorial_new_varied_stimuli_durations.ipynb
