[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [
    {name = "Joke Durnez"},
    {name = "Atharv Umap"},
    {name = "Valentin Guigon"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]
dependencies = [
    "scikit-learn>0.15.0",
    "rich",
    "reportlab",
    "pdfrw",
    "matplotlib"
]
description = "Extended and maintained fork of the neurodesign package for fMRI experimental design optimisation"
dynamic = ["version"]
license = {text = "MIT"}
maintainers = [
    {name = "Atharv Umap"},
    {name = "Valentin Guigon"}
]
name = "neurodesign-plus"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "neurodesign-plus[doc,test]",
    "pre-commit",
    "tox"
]
doc = [
    "sphinx>=7.0",
    "sphinx-copybutton",
    "furo",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints"
]
test = [
    "coverage",
    "pytest>=6.0.0",
    "pytest-cov",
    "nbmake"
]

[project.urls]
"Bug Tracker" = "https://github.com/SLDlab/neurodesign-plus/issues"
Changelog = "https://github.com/SLDlab/neurodesign-plus/blob/master/CHANGES.md"
Documentation = "https://neurodesign-plus.readthedocs.io"
Homepage = "https://github.com/SLDlab/neurodesign-plus"
Repository = "https://github.com/SLDlab/neurodesign-plus"

[tool.black]
line-length = 90

[tool.codespell]
ignore-words = ".github/codespell_ignore_words.txt"
skip = "*.ipynb"

[tool.hatch.build.hooks.vcs]
version-file = "neurodesign/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["neurodesign"]

[tool.hatch.version]
source = "vcs"

[tool.isort]
combine_as_imports = true
line_length = 90
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --doctest-modules --showlocals -s -vv --durations=0"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
junit_family = "xunit2"
minversion = "6.0"
xfail_strict = true
